# BluetoothWidget-cpp

./: CMakeLists.txt  bluetoothwidget.cpp  bluetoothwidget.h  main.cpp
